--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,35 @@
 aiohttp==1.0.5
+async==0.6.2
+async-connect.py==0.2.1
 async-timeout==2.0.0
+attrs==17.4.0
+bitsets==0.7.12
+certifi==2018.1.18
 chardet==3.0.4
+concepts==0.7.12
+discord==0.0.2
+discord-musicbot==0.0.3.dev20170604
+discord-simple==0.0.1.17
 discord.py==0.16.12
+discordbot.py==0.2.3a3
+features==0.5.8
+fileconfig==0.5.6
+get==0.0.39
+graphviz==0.8.2
+idna==2.6
+idna-ssl==1.0.1
 multidict==4.1.0
+post==0.0.26
+psutil==5.4.3
+public==0.0.65
+query-string==0.0.28
+request==0.0.26
+requests==2.18.4
+selenium==3.4.3
+six==1.11.0
+spotipy==2.4.4
+urllib3==1.22
+websocket-client==0.37.0
 websockets==3.4
+yarl==1.1.1
+youtube-dl==2018.3.20
