--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,64 @@
+Cogs==0.4.1
+Pillow==5.1.0
+PyNaCl==1.2.1
+PyYAML==3.12
+Pygments==2.2.0
 aiohttp==1.0.5
 async==0.6.2
 async-connect.py==0.2.1
-async-timeout==2.0.0
+async-timeout==2.0.0	
 attrs==17.4.0
+beautifulsoup4==4.6.0
 bitsets==0.7.12
 certifi==2018.1.18
+cffi==1.11.5
 chardet==3.0.4
+click==6.7
+clipboard==0.0.4
 concepts==0.7.12
+discogs==0.2
+discogs-cli==1.1.0
+discogs-client==2.2.1
+discogs-tagger==0.1.2
 discord==0.0.2
 discord-musicbot==0.0.3.dev20170604
-discord-simple==0.0.1.17
+discord-simple==0.0.1.17	
 discord.py==0.16.12
 discordbot.py==0.2.3a3
 features==0.5.8
+ffmpeg-python==0.1.10
 fileconfig==0.5.6
+future==0.16.0
+fuzzywuzzy==0.16.0
 get==0.0.39
 graphviz==0.8.2
 idna==2.6
-idna-ssl==1.0.1
+idna-ssl==1.0.1	
 multidict==4.1.0
+mutagen==1.40.0
+oauthlib==2.0.7
+pafy==0.5.4
+pip==9.0.1
 post==0.0.26
+prompt-toolkit==1.0.13	
 psutil==5.4.3
 public==0.0.65
-query-string==0.0.28
+pycparser==2.18
+pymacaroons-pynacl==0.9.3
+pyperclip==1.6.0
+query-string==0.0.28	
 request==0.0.26
 requests==2.18.4
 selenium==3.4.3
+setuptools==38.5.2
 six==1.11.0
 spotipy==2.4.4
 urllib3==1.22
+urwid==2.0.1
+wcwidth==0.1.7
 websocket-client==0.37.0
 websockets==3.4
+wheel==0.30.0
+xmljson==0.1.9
 yarl==1.1.1
-youtube-dl==2018.3.20
-Pillow==5.1.0
+youtube-dl==2018.3.20	
